#39 fix right align criteria

--- a/src/assets/stylesheets/_base.scss
+++ b/src/assets/stylesheets/_base.scss
@@ -1,5 +1,5 @@
-$component-width: 1200px;
-$component-max-width: 90%;
+$component-width: 100%;
+$component-min-width: 1000px;
 $height-components: 54px;
 $height-components-under: 48px;
 $height-components-hover: 35px;
