--- a/src/assets/stylesheets/components/componentslist.scss
+++ b/src/assets/stylesheets/components/componentslist.scss
@@ -4,7 +4,7 @@
 ul.componentsListe {
     padding: 0;
     width: base.$component-width;
-    max-width: base.$component-max-width;
+    min-width: base.$component-min-width;
     margin: 0 auto;
 
     &,
